(library
 (name bop)
 (libraries menhirLib stdint))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --dump --exn-carries-state)
 (infer true))

(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))
